18 September 2007: Wouter
	- wildcard nsec3 testcases, and fixup to get correct wildcard name.

17 September 2007: Wouter
	- NSEC3 hash cache unit test.
	- validator nsec3 nameerror test.

14 September 2007: Wouter
	- nsec3 nodata proof, nods proof, wildcard proof.
	- nsec3 support for cname chain ending in noerror or nodata.
	- validator calls nsec3 proof routines if no NSECs prove anything.
	- fixup iterator bug where it stored the answer to a cname under
	  the wrong qname into the cache. When prepending the cnames, the
	  qname has to be reset to the original qname.

13 September 2007: Wouter
	- nsec3 find matching and covering, ce proof, prove namerror msg.

12 September 2007: Wouter
	- fixup of manual page warnings, like for NSD bugreport.
	- nsec3 work, config, max iterations, filter, and hash cache. 

6 September 2007: Wouter
	- fixup to find libevent on mac port install.
	- fixup size_t vs unsigned portability in validator/sigcrypt.
	- please compiler on different platforms, for unreachable code.
	- val_nsec3 file.
	- pthread_rwlock type is optional, in case of old pthread libs.

5 September 2007: Wouter
	- cname, name error validator tests.
	- logging of qtype ANY works.
	- ANY type answers get RRSIG in answer section of replies (but not
	  in other sections, unless DO bit is on).
	- testbound can replay a TCP query (set MATCH TCP in the QUERY).
	- DS and noDS referral validation test.
	- if you configure many trust anchors, parent trust anchors can
	  securely deny existance of child trust anchors, if validated.
	- not all *.name NSECs are present because a wildcard was matched,
	  and *.name NSECs can prove nodata for empty nonterminals.
	  Also, for wildcard name NSECs, check they are not from the parent
	  zone (for wildcarded zone cuts), and check absence of CNAME bit,
	  for a nodata proof.
	- configure option for memory allocation debugging.
	- port configure option for memory allocation to solaris10.

4 September 2007: Wouter